--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,11 @@
-language: generic 
+language: node_js 
 
 sudo: required
 services:
    - docker
 
 before_install:
-   - docker build -t img-docker-react -f DockerFile.dev .
+   - docker build -t img-docker-react -f ./frontend/DockerFile.dev .
 
 script:     
    - docker run -e CI=true mg-docker-react npm run test
