--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ services:
    - docker
 
 before_install:
-   - docker build -t img-docker-react -f ./frontend/DockerFile.dev .
+   - docker build -t img-docker-react -f ./frontend/DockerFile.dev ./frontend
 
 script:     
    - docker run -e CI=true mg-docker-react npm run test
