--- a/.travis.yml
+++ b/.travis.yml
@@ -8,5 +8,5 @@ before_install:
    - docker build -t img-docker-react -f ./frontend/DockerFile.dev ./frontend
 
 script:     
-   - docker run -e CI=true mg-docker-react npm run test
+   - docker run -e CI=true img-docker-react npm run test
     
